Added support for OpenAI's Whisper for transcipts and subtitles.

--- a/default.conf
+++ b/default.conf
@@ -47,10 +47,17 @@ ROOT_DOWNLOAD="cdn.example.com/file/bucket"	# Domain for where files actually ar
 BUCKET="bucket"	# S3 compatible object storage bucket name
 
 # wp-cli
-WP_USE="true"
-WP_CP="server:/home/user/"
-WP_SSH="server:/var/www/example.com/html/" 
-WP_SRC_PATH="/home/user"
+#WP_USE="true"
+#WP_CP="server:/home/user/"
+#WP_SSH="server:/var/www/example.com/html/" 
+#WP_SRC_PATH="/home/user"
+
+# Use OpenAI's Whisper for transcripts and subtitlesd
+#WHISPER_USE="true"
+#WHISPER_LANG="en"
+#WHISPER_MODEL="base.en"
+#WHISPER_THREADS="16"                           # Number of CPU cores/threads for your system
+
 
 
 # Websites you need opened to post your episode
