Changed whisper version to whisper.cpp. Removed if then segments that didn't work. Minor cleanup outside of that.

--- a/default.conf
+++ b/default.conf
@@ -47,22 +47,20 @@ ROOT_DOWNLOAD="cdn.example.com/file/bucket"	# Domain for where files actually ar
 BUCKET="bucket"	# S3 compatible object storage bucket name
 
 # wp-cli
-#WP_USE="true"
-#WP_CP="server:/home/user/"
-#WP_SSH="server:/var/www/example.com/html/" 
-#WP_SRC_PATH="/home/user"
+WP_CP="server:/home/user/"
+WP_SSH="server:/var/www/example.com/html/" 
+WP_SRC_PATH="/home/user"
 
-# Use OpenAI's Whisper for transcripts and subtitlesd
-#WHISPER_USE="true"
-#WHISPER_LANG="en"
-#WHISPER_MODEL="base.en"
-#WHISPER_THREADS="16"                           # Number of CPU cores/threads for your system
+# Use OpenAI's Whisper or Whisper.cpp for transcripts and subtitlesd
+WHISPER_COMMAND="$HOME/git/whisper.cpp/main -m $HOME/git/whisper.cpp/models/ggml-base.en.bin --threads 16 -f -osrt"
+WHISPER_REMOTE_HOST=""
+WHISPER_REMOTE_PATH=""
 
 # Websites you need opened to post your episode
-#BROWSER="firefox --new-tab"
-#URL1="$WEBSITE/wp-admin/edit.php"
-#URL2="https://www.patreon.com/posts/new"
-#URL3="$WEBSITE/wp-admin/post-new.php?post_type=pretty-link"
+BROWSER="firefox --new-tab"
+URL1="$WEBSITE/wp-admin/edit.php"
+URL2="https://www.patreon.com/posts/new"
+URL3="$WEBSITE/wp-admin/post-new.php?post_type=pretty-link"
 
 # How do you name the MP3 file?
 # MP3="$PRE_LONG$LONG_NUM.mp3"				# If you include full podcast name in MP3 file name
